added css for grudge background

--- a/lib/style.scss
+++ b/lib/style.scss
@@ -196,3 +196,11 @@ header {
   font-size: 1.5em;
   min-height: 60vh;
 }
+
+.forgiven {
+  background: teal;
+}
+
+.unforgiven {
+  background: red;
+}
